--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -9,13 +9,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - users:
+      - users: actions/checkout@v3
 
       #setup key
       - run: set -eu
-      - run: mkdir "$HOME/.ssh/DEPLOY_TEST_KEY"
-      - run: echo "${{ secrets.DEPLOY_TEST_KEY}}" > "$HOME/.ssh/DEPLOY_TEST_KEY"
-      - run: chmod 600 "$HOME/.ssh/DEPLOY_TEST_KEY"
+      - run: mkdir "$HOME/.ssh/key"
+      - run: echo "${{ secrets.DEPLOY_TEST_KEY}}" > "$HOME/.ssh/key"
+      - run: chmod 600 "$HOME/.ssh/key"
 
       #deploy
-      - run: rsinc -e "ssh -p 20022 -i $HOME/.ssh/DEPLOY_TEST_KEY -o StrictHostKeyChecking=no" --archive --compress --delete . u1698197@31.31.196.38:/var/www/u1698197/data/www/mysite-kj.site
+      - run: rsinc -e "ssh -p 20022 -i $HOME/.ssh/key -o StrictHostKeyChecking=no" --archive --compress --delete . u1698197@31.31.196.38:/home/u1698197/data/www/mysite-kj.site
