--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,10 +25,12 @@ jobs:
       - uses: actions/checkout@v3
 
       #setup key
-      - run: set -eu
-      - run: mkdir "$HOME/.ssh/key"
-      - run: echo "${{ secrets.DEPLOY_TEST_KEY}}" > "$HOME/.ssh/key"
-      - run: chmod 600 "$HOME/.ssh/key"
+      runs-on: self-hosted
+      runs-on: |
+        set -eu
+        mkdir "$HOME/.ssh/key"
+        echo "${{ secrets.DEPLOY_TEST_KEY}}" > "$HOME/.ssh/key"
+        chmod 600 "$HOME/.ssh/key"
 
       #deploy
-      - run: rsinc -e "ssh -p 20022 -i $HOME/.ssh/key -o StrictHostKeyChecking=no" --archive --compress --delete . u1698197@31.31.196.38:/home/u1698197/data/www/mysite-kj.site
+      runs-on: rsync -e "ssh -p 20022 -i $HOME/.ssh/key -o StrictHostKeyChecking=no" --archive --compress --delete . u1698197@31.31.196.38:/home/u1698197/data/www/mysite-kj.site
