--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
       #setup key
       #- run : self-hosted
       - run: set -eu
-      - run: mkdir "$HOME/.ssh/key"
+      - run: mkdir "$HOME/.ssh"
       - run: echo "${{ secrets.key}}" > "$HOME/.ssh/key"
       - run: chmod 600 "$HOME/.ssh/key"
       #deploy
